Fix wrapping of attribute value buttons

--- a/packages/app/src/metadata-viewer/MetadataViewer.module.css
+++ b/packages/app/src/metadata-viewer/MetadataViewer.module.css
@@ -68,6 +68,7 @@
   align-items: center;
   font-weight: 600;
   color: var(--secondary-darker);
+  white-space: nowrap;
 }
 
 .attrValueBtn:hover {
